<resources>
    <string name="app_name">Treasure</string>
    <string name="label">Insert email</string>
    <string name="log_in">Log in</string>
    <string name="login_description">Log in to continue</string>
    <string name="insert_email">Insert e-mail here</string>
    <string name="insert_password">Insert password here</string>
    <string name="forget_button">Forgot password?</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="logo_of_the_application">logo of the application</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="insert_your_name_here">Insert your name here</string>
    <string name="profile">Profile</string>
    <string name="stats">Stats</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="hi">Hi __user__!</string>
    <string name="title_name">Name</string>
    <string name="name">__Name__</string>
    <string name="title_email">Email</string>
    <string name="email">__aaa@gmail.com__</string>
    <string name="change_password">Change Password</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="next_up">Next up</string>
    <string name="log_out">Log out</string>
    <string name="monthly_stats">Monthly Stats</string>
    <string name="happiness_you_were_happy_for_33_of_the_month">You were happy for _insert_ % of the month</string>
    <string name="sadness_nyou_were_sad_for_33_of_the_month">You were sad for _insert_% of the month</string>
    <string name="neutrality_nyou_were_neutral_for_34_of_the_month">You were neutral for _insert_% of the month</string>
    <string name="current_date">Current Date</string>
    <string name="overall_nin_this_month_you_have_mostly_been_happy_n_67">Overall\nin this month you have mostly been happy.\n 67%</string>
    <string name="impegni">__Impegni__</string>
    <string name="click_to_start_typing">Click to start typing ...</string>
    <string name="happiness">Happiness</string>
    <string name="neutral">Neutral</string>
    <string name="sadness">Sadness</string>
    <string name="events">Events</string>
    <string name="feelings">Feelings</string>
    <string name="event_title">Event_Title</string>
    <string name="start_date">Start_Date</string>
    <string name="entry_face">Entry_face</string>
    <string name="relax_no_events_for_now">Relax... no events (for now!)</string>
    <string name="weather_information">Weather information</string>
    <string name="weather_api_key">a521e7464e78415e85d182732250802</string>

    <!-- ERRORS -->
    <!-- Errors -->
    <string name="error_email_login">Check the email address</string>
    <string name="error_password_login">The password must have at least 8 characters</string>
    <string name="error_retrieving_events">There was an error retrieving the events</string>
    <string name="error_retrieving_feelings">There was an error retrieving the feelings</string>
    <string name="error_retrieving_weather">There was an error retrieving the weather</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="error_unexpected">Unexpected error</string>
</resources>