<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.fragment.LoginFragment"
    android:background="@color/yellow_app">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:contentDescription="@string/logo_of_the_application"
        android:padding="5dp"/>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Altri elementi del layout -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_email"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            style="?attr/textInputOutlinedStyle"
            android:background="#05000000"
            app:startIconDrawable="@drawable/baseline_alternate_email_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"/>



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_password"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            style="?attr/textInputOutlinedStyle"
            android:background="#05000000"
            app:startIconDrawable="@drawable/baseline_password_24"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forget_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/iconButton"
            style="?attr/materialIconButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/log_in_with_google"
            app:icon="@drawable/google"/>

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/outlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</RelativeLayout>