<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragment.ProfileSettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.fragment.LoginFragment"
        android:background="@color/yellow_app">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/baseline_person_24"
            app:tint="@color/white" />

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_picture"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/hi"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/title_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:padding="15dp"
                android:background="#05000000"
                android:text="@string/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/title_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:padding="15dp"
                android:background="#05000000"
                android:text="@string/email" />

            <!--
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"/>
            -->

            <Button
                android:id="@+id/log_out"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:backgroundTint="@color/md_theme_primaryContainer"
                android:text="@string/log_out"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>