<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragment.StatsMonthFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Sezione per selezionare mese e anno -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"/>

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn_generate_stats"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/md_theme_primaryContainer"
            android:text="Generate"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="350dp"
        android:layout_height="130dp"
        android:background="@drawable/rounded_corners_fragment"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happiness"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/happinessContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners_fragment"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="20dp"
            android:elegantTextHeight="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:background="@drawable/rounded_corners_fragment"
        android:layout_marginTop="@dimen/margin"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sadness"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/sadnessContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners_fragment"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="20dp"
            android:elegantTextHeight="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:background="@drawable/rounded_corners_fragment"
        android:layout_marginTop="@dimen/margin"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutral"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/neutralContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners_fragment"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="20dp"
            android:elegantTextHeight="true"/>
    </LinearLayout>


</LinearLayout>